<resources>
    <string name="app_name">Thirty</string>
    <string name="throw_button">Throw!</string>
    <string name="calculate_button">Calculate?</string>
    <string-array name="score_array">
        <item>Low</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="full_toast">Choose another type of scoring!</string>
    <string name="newgame_toast">Restart the game to play again.</string>
    <string name="empty_score">-</string>
    <string name="low">Low: </string>
    <string name="four">4: </string>
    <string name="five">5: </string>
    <string name="six">6: </string>
    <string name="seven">7: </string>
    <string name="eight">8: </string>
    <string name="nine">9: </string>
    <string name="ten">10: </string>
    <string name="eleven">11: </string>
    <string name="twelve">12: </string>
    <string name="restartbutton">Restart?</string>
    <string name="game">Game</string>
    <string name="scoretable">Score table</string>
</resources>
